Improvements of Model and separation styling of design files

--- a/zDrive/zDrive.csproj
+++ b/zDrive/zDrive.csproj
@@ -56,8 +56,14 @@
     </ApplicationDefinition>
     <Compile Include="Converters\BadPercentToBoolConvert.cs" />
     <Compile Include="Converters\FlagToPathConverter .cs" />
+    <Compile Include="Converters\InfoFormat.cs" />
     <Compile Include="Helpers\MouseBehaviour.cs" />
     <Compile Include="Interfaces\IDriveInfoService.cs" />
+    <Compile Include="Properties\Resources.en-US.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.en-US.resx</DependentUpon>
+    </Compile>
     <Compile Include="Services\DriveInfoService.cs" />
     <Compile Include="Services\RegistryService.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
@@ -80,6 +86,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Skins\GraySkin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -95,8 +105,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Properties\Resources.en-US.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.en-US.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
