--- a/zDrive/zDrive.csproj
+++ b/zDrive/zDrive.csproj
@@ -54,6 +54,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\Extensions.cs" />
+    <Compile Include="OtherCollections\ObservableDictionary.cs" />
     <Compile Include="Converters\BadPercentToBoolConvert.cs" />
     <Compile Include="Converters\FlagToPathConverter .cs" />
     <Compile Include="Converters\InfoFormat.cs" />
@@ -69,13 +71,21 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.en-US.resx</DependentUpon>
     </Compile>
+    <Compile Include="Services\DriveDetectionService.cs" />
     <Compile Include="Services\DriveInfoService.cs" />
+    <Compile Include="Interfaces\IDriveDetectionService.cs" />
+    <Compile Include="Interfaces\IInfoFormatService.cs" />
+    <Compile Include="Services\InfoFormatService.cs" />
     <Compile Include="Services\RegistryService.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Interfaces\IRegistryService.cs" />
     <Compile Include="Services\SimpleIoc.cs" />
     <Compile Include="ViewModels\DriveViewModel.cs" />
+    <Compile Include="Interfaces\IDriveViewModel.cs" />
+    <Compile Include="Interfaces\IInfoViewModel.cs" />
+    <Compile Include="Interfaces\IMainViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\RamInfoViewModel.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
     <Compile Include="WpfSingleInstance.cs" />
     <Page Include="MainWindow.xaml">
