--- a/zDrive/zDrive.csproj
+++ b/zDrive/zDrive.csproj
@@ -55,6 +55,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Helpers\Extensions.cs" />
+    <Compile Include="Interfaces\IInfosService.cs" />
+    <Compile Include="Interfaces\ITimerService.cs" />
     <Compile Include="OtherCollections\ObservableDictionary.cs" />
     <Compile Include="Converters\BadPercentToBoolConvert.cs" />
     <Compile Include="Converters\FlagToPathConverter .cs" />
@@ -76,10 +78,12 @@
     <Compile Include="Interfaces\IDriveDetectionService.cs" />
     <Compile Include="Interfaces\IInfoFormatService.cs" />
     <Compile Include="Services\InfoFormatService.cs" />
+    <Compile Include="Services\InfosService.cs" />
     <Compile Include="Services\RegistryService.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Interfaces\IRegistryService.cs" />
     <Compile Include="Services\SimpleIoc.cs" />
+    <Compile Include="Services\TimerService.cs" />
     <Compile Include="ViewModels\DriveViewModel.cs" />
     <Compile Include="Interfaces\IDriveViewModel.cs" />
     <Compile Include="Interfaces\IInfoViewModel.cs" />
