--- a/.editorconfig
+++ b/.editorconfig
@@ -208,7 +208,7 @@ csharp_indent_switch_labels = true
 csharp_indent_labels = no_change
 csharp_indent_block_contents = true
 csharp_indent_braces = false
-csharp_indent_case_contents_when_block = false
+csharp_indent_case_contents_when_block = true
 # Spacing options
 # https://docs.microsoft.com/visualstudio/ide/editorconfig-formatting-conventions#spacing-options
 csharp_space_after_cast = false
